tests/NormalTests/paczka1/fuzzy1/14942832.err
Error in line 8: b3oLp31fzmv A435 16,0
Error in line 23: 7dY7sV S690 41,0
Error in line 32: 7dY7sV A796 44,3
Error in line 33: 7dY7sV A435 78,7
Error in line 27: b3oLp31fzmv A435 206,4
